# DIISCO_public

./: .flake8  .gitignore  .pre-commit-config.yaml  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  cam.ipynb  requirements_dev.txt  setup.cfg  setup.py
diisco/: __init__.py  constants.py  diisco.py  gaussian_process.py  guides.py  math_ops.py  names.py  prior_f_model.py  utils.py
evals/: setup.cfg
evals/evals/: generate_data.py
evals/evals/models/: base.py  linear_model.py  rolling_linear_model.py
evals/extensive_study/: generate_data.py
evals_pkg/: setup.cfg
evals_pkg/evals/: __main__.py  discretization.py  generate_data.py  metrics.py  persistence.py  utils.py
evals_pkg/evals/models/: __init__.py  base.py  diisco_model.py  linear_model.py  rolling_linear_model.py  utils.py
evals_pkg/scripts/: execute_commands.py  generate_commands.py  generate_dataset_plots.py  generate_roc_curves.py  generate_table.py
evals_pkg/tests/: test_generate_data.py  test_multiplication_discretizer.py  test_utils.py
evals_pkg/tests/models/: test_all_models.py
notebooks/: DIISCO_AML_2_clusters_only.ipynb  DIISCO_CAR_T.ipynb  DIISCO_CAR_T_interaction_prior.ipynb  DIISCO_CAR_T_model.ipynb  DIISCO_CAR_T_robustness.ipynb  DIISCO_tutorial.ipynb  car-t-load-data.ipynb  car-t-scanpy-processing.ipynb  population_example.ipynb  scalability_script.py
scripts/: r2_vs_prop.py  scalability_script.py
tests/: test_basic_shapes.py
