[metadata]
name = diisco
version = 0.1.0
author = Nicolas Beltran-Velez
author_email = nb2838@columbia.edu
description = A probabilistic programming method to characterize dynamic cellular interactions in longitudinal scRNA-seq data.
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = MIT license
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords = diisco
url = https://github.com/velezbeltran/diisco

[options]
include_package_data = True
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    pyro-ppl
    numpy
    pandas
    torch
    scikit-learn
    scipy
    matplotlib
    seaborn